// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should compute historical networth 3`] = `
[
  {
    "_id": "1504224000000",
    "_rev": "1-7fdab5ca207bf1f7305c034e2581cb24",
    "change": 0,
    "changePercentage": 0,
    "time": 1504224000,
    "value": 178.03,
  },
  {
    "_id": "1504310400000",
    "_rev": "1-947451bbf87d243021a1827b0dae97d5",
    "change": -10.73,
    "changePercentage": -6.03,
    "time": 1504310400,
    "value": 167.3,
  },
  {
    "_id": "1504396800000",
    "_rev": "1-e7d93d1fca87f3c44404bd0c716d832e",
    "change": -0.86,
    "changePercentage": -0.51,
    "time": 1504396800,
    "value": 166.44,
  },
  {
    "_id": "1504483200000",
    "_rev": "1-d885fb2f828c1b419e7a7986edb9fee8",
    "change": -4.6,
    "changePercentage": -2.76,
    "time": 1504483200,
    "value": 161.84,
  },
  {
    "_id": "1504569600000",
    "_rev": "1-d6778c8d7b9b5e1f13f9c6bb08e09c5f",
    "change": -2.36,
    "changePercentage": -1.46,
    "time": 1504569600,
    "value": 159.48,
  },
  {
    "_id": "1504656000000",
    "_rev": "1-df100bfdc9afbb6b4977a0b5b8d96b6a",
    "change": 6.61,
    "changePercentage": 4.14,
    "time": 1504656000,
    "value": 166.09,
  },
  {
    "_id": "1504742400000",
    "_rev": "1-f8c90dbcf7ff08bc053ff32c13953a75",
    "change": 171.28,
    "changePercentage": 103.12,
    "time": 1504742400,
    "value": 337.37,
  },
  {
    "_id": "1504828800000",
    "_rev": "1-81c91498fe1c6dba6362062b30af6494",
    "change": -20,
    "changePercentage": -5.93,
    "time": 1504828800,
    "value": 317.37,
  },
  {
    "_id": "1504915200000",
    "_rev": "1-7826e7489f4f032116ed6c6a363554e5",
    "change": -1.14,
    "changePercentage": -0.36,
    "time": 1504915200,
    "value": 316.23,
  },
  {
    "_id": "1505001600000",
    "_rev": "1-e9e6035ba59e9d6ab75b0b0f8aa10122",
    "change": -6.06,
    "changePercentage": -1.92,
    "time": 1505001600,
    "value": 310.17,
  },
  {
    "_id": "1505088000000",
    "_rev": "1-3f19c678e3879e0c38ab61ab327f79d1",
    "change": -2.96,
    "changePercentage": -0.95,
    "time": 1505088000,
    "value": 307.21,
  },
  {
    "_id": "1505174400000",
    "_rev": "1-73fa710bdfc146eda8a4968e73480aa5",
    "change": -3.37,
    "changePercentage": -1.1,
    "time": 1505174400,
    "value": 303.84,
  },
  {
    "_id": "1505260800000",
    "_rev": "1-cc2e4bed9db91050eab90e5a56fb7e77",
    "change": -22.56,
    "changePercentage": -7.42,
    "time": 1505260800,
    "value": 281.28,
  },
  {
    "_id": "1505347200000",
    "_rev": "1-154a89367fdc6578436b60184824bc73",
    "change": -44.14,
    "changePercentage": -15.69,
    "time": 1505347200,
    "value": 237.14,
  },
]
`;

exports[`should refresh networth 3`] = `
[
  {
    "_id": "1504224000000",
    "_rev": "1-7fdab5ca207bf1f7305c034e2581cb24",
    "change": 0,
    "changePercentage": 0,
    "time": 1504224000,
    "value": 178.03,
  },
  {
    "_id": "1504310400000",
    "_rev": "1-947451bbf87d243021a1827b0dae97d5",
    "change": -10.73,
    "changePercentage": -6.03,
    "time": 1504310400,
    "value": 167.3,
  },
  {
    "_id": "1504396800000",
    "_rev": "1-e7d93d1fca87f3c44404bd0c716d832e",
    "change": -0.86,
    "changePercentage": -0.51,
    "time": 1504396800,
    "value": 166.44,
  },
  {
    "_id": "1504483200000",
    "_rev": "1-d885fb2f828c1b419e7a7986edb9fee8",
    "change": -4.6,
    "changePercentage": -2.76,
    "time": 1504483200,
    "value": 161.84,
  },
  {
    "_id": "1504569600000",
    "_rev": "1-d6778c8d7b9b5e1f13f9c6bb08e09c5f",
    "change": -2.36,
    "changePercentage": -1.46,
    "time": 1504569600,
    "value": 159.48,
  },
  {
    "_id": "1504656000000",
    "_rev": "1-df100bfdc9afbb6b4977a0b5b8d96b6a",
    "change": 6.61,
    "changePercentage": 4.14,
    "time": 1504656000,
    "value": 166.09,
  },
  {
    "_id": "1504742400000",
    "_rev": "1-f8c90dbcf7ff08bc053ff32c13953a75",
    "change": 171.28,
    "changePercentage": 103.12,
    "time": 1504742400,
    "value": 337.37,
  },
  {
    "_id": "1504828800000",
    "_rev": "1-81c91498fe1c6dba6362062b30af6494",
    "change": -20,
    "changePercentage": -5.93,
    "time": 1504828800,
    "value": 317.37,
  },
  {
    "_id": "1504915200000",
    "_rev": "1-7826e7489f4f032116ed6c6a363554e5",
    "change": -1.14,
    "changePercentage": -0.36,
    "time": 1504915200,
    "value": 316.23,
  },
  {
    "_id": "1505001600000",
    "_rev": "1-e9e6035ba59e9d6ab75b0b0f8aa10122",
    "change": -6.06,
    "changePercentage": -1.92,
    "time": 1505001600,
    "value": 310.17,
  },
  {
    "_id": "1505088000000",
    "_rev": "1-3f19c678e3879e0c38ab61ab327f79d1",
    "change": -2.96,
    "changePercentage": -0.95,
    "time": 1505088000,
    "value": 307.21,
  },
  {
    "_id": "1505174400000",
    "_rev": "1-73fa710bdfc146eda8a4968e73480aa5",
    "change": -3.37,
    "changePercentage": -1.1,
    "time": 1505174400,
    "value": 303.84,
  },
  {
    "_id": "1505260800000",
    "_rev": "1-cc2e4bed9db91050eab90e5a56fb7e77",
    "change": -22.56,
    "changePercentage": -7.42,
    "time": 1505260800,
    "value": 281.28,
  },
  {
    "_id": "1505347200000",
    "_rev": "2-39dfc3bbec2573aa38674b602355256a",
    "change": 0,
    "changePercentage": 0,
    "time": 1505347200,
    "value": 237.14,
  },
]
`;
